--- a/home.html
+++ b/home.html
@@ -14,7 +14,45 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav
+    
+    <section id="pageheader">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+
+                <div class="container">
+                    <a href="#" class="navbar-brand"> MY LOGO</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target = "#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggle-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">Home</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">About Me</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">Tools</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">Resume</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">Git</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a href="#" class="nav-link">Contact</a>
+                            </li>
+                    </div>
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
