--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 
-    <title>Hello, world!</title>
+    <title>Keven Iskander</title>
   </head>
   <body>
     
@@ -51,7 +51,11 @@
                             <li class="nav-item active">
                                 <a href="#" class="nav-link">Contact</a>
                             </li>
+                        
+                        </ul>
                     </div>
+                </div>
+            </nav>
         </div>
 
     <!-- Optional JavaScript -->
