--- a/home.html
+++ b/home.html
@@ -59,6 +59,20 @@
         </div>
     </section>
 
+    <section class="main">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h2>Welcome</h2>
+                    <p> jasdnflksafjlsnfjlsnlfnsnlfsnnslnflkskfnsdlkfnnsfsnsnfns.
+                    lksdnflkslkfnslkflsnfslklfsndlflsflksdnflskdnfkls.
+                    sdknflksnflnsklfnksnlnfls</p>
+                </div>
+            </div>
+        </div>
+    </seciton>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
