--- a/home.html
+++ b/home.html
@@ -63,11 +63,21 @@
 
         <div class="container">
             <div class="row">
+
                 <div class="col-sm-4">
                     <h2>Welcome</h2>
                     <p> jasdnflksafjlsnfjlsnlfnsnlfsnnslnflkskfnsdlkfnnsfsnsnfns.
                     lksdnflkslkfnslkflsnfslklfsndlflsflksdnflskdnfkls.
                     sdknflksnflnsklfnksnlnfls</p>
+                </div>
+
+                <div class="col-sm-10">
+                    
+                    <img src="images/portfolio-portrait" alt="Portrait" class="center">
+
+                </div>
+                <div class="row-sm-5">
+                    <h2>Right</h2>
                 </div>
             </div>
         </div>
