--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     
     <section id="pageheader">
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
                 <div class="container">
                     <a href="#" class="navbar-brand"> MY LOGO</a>
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section class="main">
+    <!-- <section class="main">
 
         <div class="container">
             <div class="row">
@@ -81,7 +81,13 @@
                 </div>
             </div>
         </div>
-    </seciton>
+    </section> -->
+
+    <section class="topsection" style="margin-auto; background: #403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
+        <div class="container text-center text-light">
+            <h1>Welcome</h1>
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
