--- a/home.html
+++ b/home.html
@@ -83,9 +83,10 @@
         </div>
     </section> -->
 
-    <section class="topsection" style="margin-auto; background: #403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
-        <div class="container text-center text-light">
+    <section class="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
+        <div class="topcontainer text-center text-light">
             <h1>Welcome</h1>
+            
         </div>
     </section>
 
