--- a/home.html
+++ b/home.html
@@ -83,12 +83,22 @@
         </div>
     </section> -->
 
+    <section class="separator" style="margin:auto; background:#403e39; height:100vh;">
+    
+    </section>
+
     <section class="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
         <div class="topcontainer text-center text-light">
             <h1>Welcome</h1>
-            
+            <img src="images/portfolio-portrait.png" alt="profile shot" width="940" height="788">
         </div>
     </section>
+
+    <main role="main" class="maincontainer" style="height:200vh;">
+        <div class="bottomsection mt-5 pt-5">
+            <h1>Main</h1>
+        </div>
+    </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
