--- a/home.html
+++ b/home.html
@@ -83,8 +83,8 @@
         </div>
     </section> -->
 
-    <section class="separator" style="margin:auto; background:#403e39; height:100vh;">
-    
+    <section class="separator" style="margin:auto; background:#403e39; height:135vh;">
+        <img src="images/wallpaper.png" alt="profile shot" width="1920" height="1080">
     </section>
 
     <section class="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
