--- a/home.html
+++ b/home.html
@@ -83,13 +83,13 @@
         </div>
     </section> -->
 
-    <section class="separator" style="margin:auto; background:#403e39; height:135vh;">
-        <img src="images/wallpaper.png" alt="profile shot" width="1920" height="1080">
+    <section class="separator" style="margin:auto; background:#403e39; height:110vh;">
+        <img src="images/wallpaper.png" alt="profile shot" width="1500" height="850">
     </section>
 
-    <section class="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
+    <section class="topsection" style="margin:auto; background:#403e39; height:93vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
         <div class="topcontainer text-center text-light">
-            <h1>Welcome</h1>
+            <h1>Welcome to my first website!</h1>
             <img src="images/portfolio-portrait.png" alt="profile shot" width="940" height="788">
         </div>
     </section>
