--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
                 <div class="container">
-                    <a href="#" class="navbar-brand"> MY LOGO</a>
+                    <a href="#" class="navbar-brand">Keven Iskander</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target = "#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggle-icon"></span>
                     </button>
@@ -83,8 +83,13 @@
         </div>
     </section> -->
 
-    <section class="separator" style="margin:auto; background:#403e39; height:100vh;">
-        <img src="images/wallpaper.png" alt="profile shot" width="1500" height="850">
+    <section class="separator" style="margin:auto; background:#403e39; height:125vh;">
+        <div class="separator" alt="undernav">
+            <img src="images/wallpaper.png" alt="profile shot" width="1500" height="850">
+        </div>
+        <div class="under-separator" alt="scroll">
+            <img src="images/scroll.gif" alt="scroll-gif">
+        </div>
     </section>
 
     <section class="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
