--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
     </section> -->
 
     <section class="scroll" id="separator" style="margin:auto; background:#403e39; height:100vh;">
-        <h1>Welcome!</h1>
+        <h1>Welcome to my first website!</h1>
             <!--<img src="images/wallpaper.png" alt="profile shot" width="1900" height="1080">-->
         
         
@@ -108,7 +108,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="scrollanimation.js"></script>
+    <!--<script src="scrollanimation.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
