--- a/home.html
+++ b/home.html
@@ -93,6 +93,9 @@
         
     </section>
 
+    <div class="border" id="topboder" style="margin:auto; background:#403e39; width:100vw; height:25vh;">
+    </div>
+
     <section class="topsection" id="topsection" style="margin:auto; background:#403e39; height:75vh; display:flex; flex-direction:column; justify-content:center; width:50vw;">
         <div class="topcontainer text-center text-light">
             
