--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
     </section> -->
 
     <section class="scroll" id="separator" style="margin:auto; background:#403e39; height:100vh;">
-        <h1>Hi, I'm Keven Iskander!</h1>
+        <h1 class="line1 anim-typewriter">Hi, I'm Keven Iskander</h1>
             <!--<img src="images/wallpaper.png" alt="profile shot" width="1900" height="1080">-->
         
         
