about-me page updated

--- a/home.html
+++ b/home.html
@@ -103,8 +103,10 @@
         <div class="container" id="aboutme">
             <img src="images/profile-circle-cropped.png" alt="profile shot".
             <div class="circle">
+                <h2>Computer Science (BSc)</h2>
                 <p>I'm a 4th year Computer Science student at Wilfrid Laurier University. I am an engaged, creative programmer tuned and focused towards back-end development with a newfound aptitude for front-end design.
-                Set to graduate in the spring of 2021, I'm setting my sights on oportunities in the cybersecurity industry, as well as data science and analytics.</p>
+                Set to graduate in the spring of 2021, I'm setting my sights on oportunities in the cybersecurity industry, as well as, data science and analytics. From applied cryptography to mobile computing,
+                I love developing strong algorithms and showcasing my design skills in procedural, object-oriented and low-level programming.</p>
 
             </div>
         </div>    
