layout almost complete

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                             </li>
 
                             <li class="nav-item active">
-                                <a href="#" class="nav-link">About Me</a>
+                                <a href="#topsection" class="nav-link">About Me</a>
                             </li>
 
                             <li class="nav-item active">
@@ -112,11 +112,15 @@
         </div>    
     </section>
 
-    <main role="main" class="maincontainer" style="height:200vh;">
-        <div class="bottomsection mt-5 pt-5">
-            <h1>Main</h1>
-        </div>
-    </main>
+    <div style="height: 1vh; background: #ffffff;"></div>
+
+    <section class="center" id="bottomsection" style="margin: auto; height: 99vh; display: flex; flex-direction: column; justify-content: center;">
+        
+        <div class="container" id="tools"></div>
+
+    </section>
+
+    <div style="height: 1vh; background: #ffffff;"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
