adding current project page

--- a/home.html
+++ b/home.html
@@ -40,6 +40,10 @@
                             <li class="nav-item active">
                                 <a href="#bottomsection" class="nav-link">Languages & Tools</a>
                             </li>
+
+                            <li class="nav-item active">
+                                <a href="#currentproject" class="nav-link" style="color: #e7015e; font-style:oblique; font-weight: bold;">Current Project</a>
+                            </li>
                         
                         </ul>
                     </div>
@@ -142,6 +146,16 @@
     </section>
 
     <div style="height: 1vh; background: #ffffff;"></div>
+
+    <section class="center" id="currentproject" style="margin: auto; height: 99vh;">
+
+        <div class="container" id="cuddlebug">
+            <h2>Cuddlebug (Android)</h2>
+            <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
+                Cuddlebug is the go-to solution for your quarantine date nights. Coming to the Google Play Store, December 2020!</p>
+        </div>
+
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
