adding current project page

--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
 
     <section class="center" id="currentproject" style="margin: auto; height: 99vh;">
 
-        <div class="container" id="cuddlebug">
+        <div class="container" id="cuddlebug" style="float: right; width: 30vw; left: 70%; top: 30%;">
             <h2>Cuddlebug (Android)</h2>
             <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
                 Cuddlebug is the go-to solution for your quarantine date nights. Coming to the Google Play Store, December 2020!</p>
