updating current project page & making site mobile friendly

--- a/home.html
+++ b/home.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
         <title>Keven Iskander-Computer Scientist</title>
     </head>
@@ -23,7 +25,7 @@
                 <div class="container">
                     <a href="#pageheader" class="navbar-brand">KI</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target = "#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggle-icon"></span>
+                    <span class="navbar-toggle-icon" style="color: white;"><i class="fa fa-angle-down" style="font-size:24px"></i></span>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -78,8 +80,8 @@
 
     <section class="scroll" id="separator" style="margin:auto; background:#403e39; height:100vh;">
         <h1>Hi, I'm Keven Iskander</h1><br>
-        <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 47%; font-size: 30px;"><i class="devicon-linkedin-plain"></i></a>
-        <a href="https://github.com/keveniskander" style="top: 75%; left: 51%; font-size: 30px;"><i class="devicon-github-plain"></i></a>
+        <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 46%; font-size: 30px;"><i class="devicon-linkedin-plain" style="margin-right: 20px;"></i></a>
+        <a href="https://github.com/keveniskander" style="top: 75%; left: 52%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 20px;"></i></a>
         <a href="#topsection" id="scroll"><span></span>Scroll to learn more about me!</a>
         
     </section>
@@ -139,6 +141,8 @@
                 <a href="https://visualstudio.microsoft.com/"><i class="devicon-visualstudio-plain-wordmark colored"></i></a>
                 <a href="https://www.microsoft.com/en-ca/windows"><i class="devicon-windows8-original"></i></a>
 
+                
+
             </div>
 
         </div>
@@ -149,6 +153,8 @@
 
     <section class="center" id="currentproject" style="margin: auto; height: 99vh;">
 
+
+        <img src="images/app-loading.png" style="left: 30%">
         <div class="container" id="cuddlebug" style="float: right; width: 30vw; left: 70%; top: 30%;">
             <h2>Cuddlebug (Android)</h2>
             <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
