aligning elements for mobile

--- a/home.html
+++ b/home.html
@@ -3,8 +3,9 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=yes">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, shrink-to-fit=yes">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        
 
 
         <!-- Bootstrap & CSS -->
@@ -79,9 +80,9 @@
     </section> -->
 
     <section class="scroll" id="separator" style="margin:auto; background:#403e39; height:100vh;">
-        <h1>Hi, I'm Keven Iskander</h1><br>
-        <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 46%; font-size: 30px;"><i class="devicon-linkedin-plain" style="margin-right: 20px;"></i></a>
-        <a href="https://github.com/keveniskander" style="top: 75%; left: 52%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 20px;"></i></a>
+        <h1 id="name">Hi, I'm Keven Iskander</h1><br>
+        <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 45%; font-size: 30px;"><i class="devicon-linkedin-plain"></i></a>
+        <a href="https://github.com/keveniskander" style="top: 75%; left: 50%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 50px;"></i></a>
         <a href="#topsection" id="scroll"><span></span>Scroll to learn more about me!</a>
         
     </section>
