--- a/home.html
+++ b/home.html
@@ -155,11 +155,39 @@
     <section class="center" id="currentproject" style="margin: auto; height: 99vh;">
 
 
-        <img src="images/app-loading.png" style="left: 30%">
-        <div class="container" id="cuddlebug" style="float: right; width: 30vw; left: 70%; top: 30%;">
+        <!--<img src="images/app-loading.png" style="left: 30%">
+        <img src="images/app-skeleton.png" style="left: 10%">
+        <div class="container" id="cuddlebug" style="top: 40%">
             <h2>Cuddlebug (Android)</h2>
             <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
                 Cuddlebug is the go-to solution for your quarantine date nights. Coming to the Google Play Store, December 2020!</p>
+        </div>-->
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" id="carouselslider">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img style="height: 90vh;" src="images/app-loading.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                <img style="height: 90vh;" src="images/app-skeleton.png" alt="Second slide">
+                </div>
+                <div class="carousel-item" alt="Third slide">
+                <div class="container" style="height: 90vh;"><p>Lorem</p></div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
 
         <!--<img src="images/quarter-circle.png" style="bottom: 0%; right:0%">-->
