--- a/home.html
+++ b/home.html
@@ -170,14 +170,15 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img style="height: 90vh;" src="images/app-loading.png" alt="First slide">
+                <div class="carousel-item active" style="height: 90vh;">
+                <div class="container" id="carouselp" style="width: 85vw; padding: 5px; text-align: center; color: white; position: relative; top: 50%;"><p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
+                Cuddlebug is the go-to solution for your quarantine date nights. Coming to the Google Play Store, December 2020!</p></div>
                 </div>
-                <div class="carousel-item">
-                <img style="height: 90vh;" src="images/app-skeleton.png" alt="Second slide">
+                <div class="carousel-item" style="height: 90vh;" alt="Second slide">
+                <img src="images/app-loading.png" alt="First slide">
                 </div>
-                <div class="carousel-item" alt="Third slide">
-                <div class="container" style="height: 90vh;"><p>Lorem</p></div>
+                <div class="carousel-item" style="height: 90vh;" alt="Third slide">
+                <img src="images/app-skeleton.png" alt="Second slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
