making mobile friendly

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                             </li>
 
                             <li class="nav-item active">
-                                <a href="#bottomsection" class="nav-link">Languages & Tools</a>
+                                <a href="#bottomsection" class="nav-link">Languages &amp; Tools</a>
                             </li>
 
                             <li class="nav-item active">
@@ -83,7 +83,7 @@
         <h1 id="name">Hi, I'm Keven Iskander</h1><br>
         <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 45%; font-size: 30px;"><i class="devicon-linkedin-plain"></i></a>
         <a href="https://github.com/keveniskander" style="top: 75%; left: 50%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 50px;"></i></a>
-        <a href="#topsection" id="scroll"><span></span>Scroll to learn more about me!</a>
+        <a href="#topsection" id="scroll"><span></span><p id="scrollp">Scroll to learn more about me!</p></a>
         
     </section>
 
@@ -170,14 +170,17 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active" style="height: 90vh;">
-                <div class="container" id="carouselp" style="width: 85vw; padding: 5px; text-align: center; color: white; position: relative; top: 50%;"><p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
-                Cuddlebug is the go-to solution for your quarantine date nights. Coming to the Google Play Store, December 2020!</p></div>
+                <div class="carousel-item active" style="height: 95vh;">
+                <div class="container" id="carouselp" style="max-width: 600px; padding: 5px; text-align: center; color: white; position: relative; top: 30%;
+                 box-sizing: border-box; border-radius: 10px; box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);">
+                 <h2>CUDDLEBUG</h2><br></br>
+                <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
+                Cuddlebug is the go-to solution for your quarantine date nights.<h5 style="color: #dd8170;">Launching December 2020!</h5></p></div>
                 </div>
-                <div class="carousel-item" style="height: 90vh;" alt="Second slide">
+                <div class="carousel-item" style="height: 95vh;" alt="Second slide">
                 <img src="images/app-loading.png" alt="First slide">
                 </div>
-                <div class="carousel-item" style="height: 90vh;" alt="Third slide">
+                <div class="carousel-item" style="height: 95vh;" alt="Third slide">
                 <img src="images/app-skeleton.png" alt="Second slide">
                 </div>
             </div>
