making mobile friendly

--- a/home.html
+++ b/home.html
@@ -146,6 +146,8 @@
 
             </div>
 
+        <p style="font-size: 14px;">These are some of my favorite languages to write and some of the platforms I'm familiar with.<br>More can be found on my github page!--></p>
+
         </div>
 
     </section>
@@ -177,11 +179,13 @@
                 <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
                 Cuddlebug is the go-to solution for your quarantine date nights.<h5 style="color: #dd8170;">Launching December 2020!</h5></p></div>
                 </div>
-                <div class="carousel-item" style="height: 95vh;" alt="Second slide">
-                <img src="images/app-loading.png" alt="First slide">
+                <div class="carousel-item" style="height: 95vh;" alt="Second slide" id="carouselimg1">
+                <div class="container" id="carouselp" style="height: 95vh;">
+                <img src="images/app-loading.png" alt="First slide" style="max-width: 100%; max-height: 100%;" id="cimage1">
                 </div>
-                <div class="carousel-item" style="height: 95vh;" alt="Third slide">
-                <img src="images/app-skeleton.png" alt="Second slide">
+                </div>
+                <div class="carousel-item" style="height: 95vh;" alt="Third slide" id="carouselimg2">
+                <img src="images/app-skeleton.png" alt="Second slide" style="max-width: 100%; max-height: 100%;" id="cimage2"> 
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
