--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
     <section class="scroll" id="separator" style="margin:auto; background:#403e39; height:100vh;">
         <h1 id="name">Hi, I'm Keven Iskander</h1><br>
         <a href="https://www.linkedin.com/in/keven-iskander/" style="top: 75%; left: 45%; font-size: 30px;"><i class="devicon-linkedin-plain"></i></a>
-        <a href="https://github.com/keveniskander" style="top: 75%; left: 50%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 50px;"></i></a>
+        <a href="https://github.com/keveniskander" style="top: 75%; right: 45%; font-size: 30px;"><i class="devicon-github-plain" style="margin-left: 50px;"></i></a>
         <a href="#topsection" id="scroll"><span></span><p id="scrollp">Scroll to learn more about me!</p></a>
         
     </section>
@@ -170,22 +170,35 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" style="height: 95vh;">
                 <div class="container" id="carouselp" style="max-width: 600px; padding: 5px; text-align: center; color: white; position: relative; top: 30%;
                  box-sizing: border-box; border-radius: 10px; box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);">
-                 <h2>CUDDLEBUG</h2><br></br>
+                 <h2>CUDDLEBUG - Android App</h2><br></br>
                 <p>Discover what your partner's been itching to watch! A fun, intuitive way for couples to settle on their movie night,
                 Cuddlebug is the go-to solution for your quarantine date nights.<h5 style="color: #dd8170;">Launching December 2020!</h5></p></div>
                 </div>
                 <div class="carousel-item" style="height: 95vh;" alt="Second slide" id="carouselimg1">
-                <div class="container" id="carouselp" style="height: 95vh;">
+                <div class="container" style="height: 95vh;">
                 <img src="images/app-loading.png" alt="First slide" style="max-width: 100%; max-height: 100%;" id="cimage1">
                 </div>
                 </div>
                 <div class="carousel-item" style="height: 95vh;" alt="Third slide" id="carouselimg2">
                 <img src="images/app-skeleton.png" alt="Second slide" style="max-width: 100%; max-height: 100%;" id="cimage2"> 
+                </div>
+                <div class="carousel-item" style="height: 95vh;">
+                <div class="container" id="carousel-item" style="max-width: 600px; padding: 5px; text-align: center; color: white; position: relative; top: 30%;
+                box-sizing: border-box; border-radius: 10px; box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);">
+                <h2>Current Courses</h2><br></br>
+                <p>Other than my personal projects, I'm currently enrolled in full time studies! Here's a list of my courses (fall 2020 semester):<br><ul>
+                    <h6><li style="color: #dd8170;">CP414 - Foundations in Computing</li>
+                    <li style="color: #dd8170;">CP460 - Cryptography</li>
+                    <li style="color: #dd8170;">CP468 - Artificial Intelligence</li>
+                    <li style="color: #dd8170;">CP470 - Android Programming</li>
+                    <li style="color: #dd8170;">CP340 - E-Commerce</li></h6>
+                  </ul></p></div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -196,6 +209,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
+            
         </div>
 
         <!--<img src="images/quarter-circle.png" style="bottom: 0%; right:0%">-->
