--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-        <title>Keven Iskander-Computer Scientist</title>
+        <title>Keven Iskander-Programmer</title>
     </head>
 <body>
     <!-- Navbar pulled from Bootstrap -->
