icon added to cuddlebug bubble

--- a/index.html
+++ b/index.html
@@ -231,11 +231,17 @@
         <div class="bubble-container">
             
             <div onclick="expand(this);" class="bubble-expand" style="overflow: hidden;">
-                <div class="center" style="top: 25%; color: #ffffff; overflow: hidden;">
-                    <h2>CuddleBug</h2>
+                <div class="center" style="color: #ffffff; overflow: hidden;">
+                    <!-- <h2>CuddleBug</h2> -->
+                    <img src="images/app_icon.ico" style="max-width: 90%;max-height: 90%;">
                     <p>The perfect android movie selection app!</p>
                     <i class="gg-add" style="left: 45%;"></i>
-                    <a id="cuddlebug-github" style="size: 10px; color: #ffffff; visibility: hidden;" href="https://github.com/alexanderfrancis/CP470finalproject">github repository</a>
+                    <p style="visibility: hidden;">CuddleBug is a fun, attractive alternative to movie selection.
+                    With the help of an open movie API, our team acquired an up to date list of relevant films/tv shows available in Canada, designed a modern,
+                    intuitive GUI for film selection and have a user account system in place that permits sharing data between two or more accounts. 
+                    <br>    fmdskl
+                    </p>
+                    <a id="cuddlebug-github" style="size: 10px; color: #ffffff; visibility: hidden;" href="https://github.com/alexanderfrancis/CP470finalproject">Github</a>
                     <img src="images/app-skeleton.png" style="visibility: hidden;">
                     
             </div>
