--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
         <div class="bubble-container">
             
             <div onclick="expand(this);" class="bubble-expand" style="overflow: hidden;">
-                <div class="center" style="color: #ffffff; overflow: hidden;">
+                <div class="center" style="color: #ffffff; overflow: hidden; max-width: 88%;">
                     <!-- <h2>CuddleBug</h2> -->
                     <img src="images/app_icon.ico" style="max-width: 90%;max-height: 90%;">
+                    <i class="gg-add" style="left:44%;" id="plus"></i>
                     <h4>CuddleBug Android Application</h4>
                     <!-- <i class="gg-add" style="left: 45%;"></i> -->
                     <p style="visibility: hidden; font-size: 15px;">CuddleBug is a fun, intuitive way to pick a movie for you and your partner. Initially written as a term project, our team is currently working on further developing the app and preparing it for Play Store release in May 2021. 
