--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <a href="https://java.com/en/download/" target="_blank"><i class="devicon-java-plain-wordmark colored"></i></a>
                 <a href="https://www.javascript.com/" target="_blank"><i class="devicon-javascript-plain colored"></i></a>
                 <a href="https://www.python.org/" target="_blank"><i class="devicon-python-plain-wordmark colored"></i></a>
+                <i class="devicon-php-plain colored"></i>
 
             </div>
 
@@ -238,7 +239,7 @@
                     <i class="gg-add" style="left:44%;" id="plus"></i>
                     <a href="https://github.com/alexanderfrancis/CP470finalproject" target="_blank"><p style="visibility: hidden; font-size: 18px; color:#dd8170; font-weight: bold; font-style: oblique;">CuddleBug Android Application</p></a>
                     <!-- <i class="gg-add" style="left: 45%;"></i> -->
-                    <p style="visibility: hidden; font-size: 15px;">CuddleBug is a fun, intuitive way to pick a movie for you and your partner. Initially written as a term project, our team is currently working on further developing the app and preparing it for Play Store release in May 2021. 
+                    <p style="visibility: hidden; font-size: 15px;">CuddleBug is a fun, intuitive way to pick a movie for you and your partner. Initially written as a term project, our team is currently working on further developing the app and preparing it for Play Store release. 
                     </p>
                     <p style="font-size: xx-small; visibility: hidden;">Developed by: Keven Iskander, Carla Castaneda, Nicole Laslavic, Alexander Francis and Thenura Jayasinghe<br><a id="cuddlebug-github" style="font-size: medium; color: #ffffff; visibility: hidden;" href="https://github.com/alexanderfrancis/CP470finalproject"><i class="devicon-github-plain"></i></a></p>
                     <br>
